--- a/personal.html
+++ b/personal.html
@@ -284,7 +284,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="record card">
+                    <div id="record" class="card">
                         <div class="card-content">
                             <h3>歷史紀錄</h3>
                             <ul class="tab">
@@ -354,7 +354,9 @@
                                                     <div><img src="img/coin.png">301,100.051831</div>
                                                 </td>
                                                 <td class="record-status"><span><i class="success">•</i> 已完成</span></td>
-                                                <td class="record-view"><button class="btn-tertiary">查看</button></td>
+                                                <td class="record-view">
+                                                    <a class="button btn-tertiary" href="javascript:void(0)">查看</a>
+                                                </td>
                                             </tr>
                                             <tr>
                                                 <td class="record-time">2020-03-03 23:55</td>
@@ -366,7 +368,9 @@
                                                 <td class="record-status">
                                                     <span><i class="warning">•</i> Pemrosesan Pembelian</span>
                                                 </td>
-                                                <td class="record-view"><button class="btn-tertiary">查看</button></td>
+                                                <td class="record-view">
+                                                    <a class="button btn-tertiary" href="javascript:void(0)">查看</a>
+                                                </td>
                                             </tr>
                                             <tr>
                                                 <td class="record-time">2020-03-03 23:55</td>
@@ -376,7 +380,9 @@
                                                     <div><img src="img/coin.png">30,000.12345</div>
                                                 </td>
                                                 <td class="record-status"><span><i class="error">•</i> 失敗</span></td>
-                                                <td class="record-view"><button class="btn-tertiary">查看</button></td>
+                                                <td class="record-view">
+                                                    <a class="button btn-tertiary" href="javascript:void(0)">查看</a>
+                                                </td>
                                             </tr>
                                             <tr>
                                                 <td class="record-time">2020-03-03 23:55</td>
@@ -386,7 +392,9 @@
                                                     <div><img src="img/coin.png">301,100.051831</div>
                                                 </td>
                                                 <td class="record-status"><span><i class="success">•</i> 已完成</span></td>
-                                                <td class="record-view"><button class="btn-tertiary">查看</button></td>
+                                                <td class="record-view">
+                                                    <a class="button btn-tertiary" href="javascript:void(0)">查看</a>
+                                                </td>
                                             </tr>
                                             <tr>
                                                 <td class="record-time">2020-03-03 23:55</td>
@@ -396,7 +404,9 @@
                                                     <div><img src="img/coin.png">100</div>
                                                 </td>
                                                 <td class="record-status"><span><i class="warning">•</i> 等待中</span></td>
-                                                <td class="record-view"><button class="btn-tertiary">查看</button></td>
+                                                <td class="record-view">
+                                                    <a class="button btn-tertiary" href="javascript:void(0)">查看</a>
+                                                </td>
                                             </tr>
                                             <tr>
                                                 <td class="record-time">2020-03-03 23:55</td>
@@ -406,7 +416,9 @@
                                                     <div><img src="img/coin.png">301,100.051831</div>
                                                 </td>
                                                 <td class="record-status"><span><i class="success">•</i> 已完成</span></td>
-                                                <td class="record-view"><button class="btn-tertiary">查看</button></td>
+                                                <td class="record-view">
+                                                    <a class="button btn-tertiary" href="javascript:void(0)">查看</a>
+                                                </td>
                                             </tr>
                                             <tr>
                                                 <td class="record-time">2020-03-03 23:55</td>
@@ -416,7 +428,9 @@
                                                     <div><img src="img/coin.png">3,000</div>
                                                 </td>
                                                 <td class="record-status"><span><i class="warning">•</i> 等待中</span></td>
-                                                <td class="record-view"><button class="btn-tertiary">查看</button></td>
+                                                <td class="record-view">
+                                                    <a class="button btn-tertiary" href="javascript:void(0)">查看</a>
+                                                </td>
                                             </tr>
                                             <tr>
                                                 <td class="record-time">2020-03-03 23:55</td>
@@ -426,7 +440,9 @@
                                                     <div><img src="img/coin.png">3,000</div>
                                                 </td>
                                                 <td class="record-status"><span><i class="warning">•</i> 等待中</span></td>
-                                                <td class="record-view"><button class="btn-tertiary">查看</button></td>
+                                                <td class="record-view">
+                                                    <a class="button btn-tertiary" href="javascript:void(0)">查看</a>
+                                                </td>
                                             </tr>
                                             <tr>
                                                 <td class="record-time">2020-03-03 23:55</td>
@@ -436,7 +452,9 @@
                                                     <div><img src="img/coin.png">3,000</div>
                                                 </td>
                                                 <td class="record-status"><span><i class="success">•</i> 已完成</span></td>
-                                                <td class="record-view"><button class="btn-tertiary">查看</button></td>
+                                                <td class="record-view">
+                                                    <a class="button btn-tertiary" href="javascript:void(0)">查看</a>
+                                                </td>
                                             </tr>
                                             <tr>
                                                 <td class="record-time">2020-03-03 23:55</td>
@@ -446,7 +464,9 @@
                                                     <div><img src="img/coin.png">301,100.051831</div>
                                                 </td>
                                                 <td class="record-status"><span><i class="error">•</i> 失敗</span></td>
-                                                <td class="record-view"><button class="btn-tertiary">查看</button></td>
+                                                <td class="record-view">
+                                                    <a class="button btn-tertiary" href="javascript:void(0)">查看</a>
+                                                </td>
                                             </tr>
                                         </tbody>
                                     </table>
