--- a/shop-detail.html
+++ b/shop-detail.html
@@ -291,7 +291,7 @@
                                         <span>ETH</span>
                                     </div>
                                 </div>
-                                <a class="button btn-tertiary" href="personal.html">查看訂單記錄</a>
+                                <a class="button btn-tertiary" href="personal.html#record">查看訂單記錄</a>
                             </div>
                         </div>
                     </div>
