更新遊戲背景排版方式

--- a/guess-the-number.html
+++ b/guess-the-number.html
@@ -143,8 +143,8 @@
                     <div class="game-detail card">
                         <div class="card-content">
                             <div class="game-zone guess-the-number">
-                                <div class="default">
-                                    <img src="img/game/guess-the-number/cover.jpg">
+                                <div class="default"
+                                    style="background-image: url(img/game/guess-the-number/cover.jpg);">
                                     <div class="game-title">
                                         <h3>Guess the Number</h3>
                                         <!-- ↓若還沒連結錢包則先跳出連結錢包的彈窗 -->
