更新第一款遊戲

--- a/game.html
+++ b/game.html
@@ -156,15 +156,43 @@
                             </a>
                         </li>
                         <li>
+                            <a href="paper-scissors-stone.html">
+                                <div class="img">
+                                    <img src="img/game/paper-scissors-stone/thumb.jpg">
+                                </div>
+                                <h4>Paper, Scissors, Stone</h4>
+                                <ul class="tags">
+                                    <li>fortune</li>
+                                    <li>paper-scissors-stone</li>
+                                    <li>&lt; 3 minutes</li>
+                                </ul>
+                                <div class="btn"><button class="btn-tertiary">View Details</button></div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="interstellar-connection.html">
+                                <div class="img">
+                                    <img src="img/game/interstellar-connection/thumb.jpg">
+                                </div>
+                                <h4>Interstellar Connection</h4>
+                                <ul class="tags">
+                                    <li>fortune</li>
+                                    <li>slot machine</li>
+                                    <li>&lt; 3 minutes</li>
+                                </ul>
+                                <div class="btn"><button class="btn-tertiary">View Details</button></div>
+                            </a>
+                        </li>
+                        <li>
                             <a href="bet-big-small.html">
                                 <div class="img">
-                                    <img src="img/game/bet-big-small/thumb.jpg">
+                                    <img src="img/game/game-coming-soon.jpg">
                                 </div>
                                 <h4>Bet Big/Small</h4>
                                 <ul class="tags">
-                                    <li>tag</li>
-                                    <li>tag</li>
-                                    <li>tag</li>
+                                    <li>fortune</li>
+                                    <li>dice</li>
+                                    <li>&lt; 3 minutes</li>
                                 </ul>
                                 <div class="btn"><button class="btn-tertiary">View Details</button></div>
                             </a>
@@ -172,13 +200,13 @@
                         <li>
                             <a href="odd-even-betting.html">
                                 <div class="img">
-                                    <img src="img/game/odd-even-betting/thumb.jpg">
+                                    <img src="img/game/game-coming-soon.jpg">
                                 </div>
                                 <h4>Odd/Even Betting</h4>
                                 <ul class="tags">
-                                    <li>tag</li>
-                                    <li>tag</li>
-                                    <li>tag</li>
+                                    <li>fortune</li>
+                                    <li>dice</li>
+                                    <li>&lt; 3 minutes</li>
                                 </ul>
                                 <div class="btn"><button class="btn-tertiary">View Details</button></div>
                             </a>
@@ -186,97 +214,69 @@
                         <li>
                             <a href="higher-number-wins.html">
                                 <div class="img">
-                                    <img src="img/game/higher-number-wins/thumg.jpg">
+                                    <img src="img/game/game-coming-soon.jpg">
                                 </div>
                                 <h4>Higher number wins</h4>
                                 <ul class="tags">
-                                    <li>tag</li>
-                                    <li>tag</li>
-                                    <li>tag</li>
+                                    <li>fortune</li>
+                                    <li>dice</li>
+                                    <li>&lt; 3 minutes</li>
                                 </ul>
                                 <div class="btn"><button class="btn-tertiary">View Details</button></div>
                             </a>
                         </li>
                         <li>
-                            <a href="game-detail.html">
-                                <div class="img">
-                                    <img src="img/game/game-coming-soon.jpg">
-                                </div>
-                                <h4>《決勝時刻®：現代戰爭® II 2022》</h4>
-                                <ul class="tags">
-                                    <li>tag</li>
-                                    <li>tag</li>
-                                    <li>tag</li>
-                                </ul>
-                                <div class="btn"><button class="btn-tertiary">View Details</button></div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="game-detail.html">
+                            <a href="coin-matching.html">
                                 <div class="img">
                                     <img src="img/game/game-coming-soon.jpg">
                                 </div>
                                 <h4>Coin Matching</h4>
                                 <ul class="tags">
-                                    <li>tag</li>
-                                    <li>tag</li>
-                                    <li>tag</li>
+                                    <li>fortune</li>
+                                    <li>coin</li>
+                                    <li>&lt; 3 minutes</li>
                                 </ul>
                                 <div class="btn"><button class="btn-tertiary">View Details</button></div>
                             </a>
                         </li>
                         <li>
-                            <a href="game-detail.html">
+                            <a href="red-vs-black.html">
                                 <div class="img">
                                     <img src="img/game/game-coming-soon.jpg">
                                 </div>
-                                <h4>Coin Matching</h4>
+                                <h4>Red vs. Black</h4>
                                 <ul class="tags">
-                                    <li>tag</li>
-                                    <li>tag</li>
-                                    <li>tag</li>
+                                    <li>fortune</li>
+                                    <li>roulette</li>
+                                    <li>&lt; 3 minutes</li>
                                 </ul>
                                 <div class="btn"><button class="btn-tertiary">View Details</button></div>
                             </a>
                         </li>
                         <li>
-                            <a href="game-detail.html">
+                            <a href="super-fruit-roulette.html">
                                 <div class="img">
                                     <img src="img/game/game-coming-soon.jpg">
                                 </div>
-                                <h4>Coin Matching</h4>
+                                <h4>Super Fruit Roulette</h4>
                                 <ul class="tags">
-                                    <li>tag</li>
-                                    <li>tag</li>
-                                    <li>tag</li>
+                                    <li>fortune</li>
+                                    <li>roulette</li>
+                                    <li>&lt; 3 minutes</li>
                                 </ul>
                                 <div class="btn"><button class="btn-tertiary">View Details</button></div>
                             </a>
                         </li>
                         <li>
-                            <a href="game-detail.html">
+                            <a href="spin-the-wheel.html">
                                 <div class="img">
                                     <img src="img/game/game-coming-soon.jpg">
                                 </div>
-                                <h4>Coin Matching</h4>
+                                <h4>Spin the Wheel</h4>
                                 <ul class="tags">
-                                    <li>tag</li>
-                                    <li>tag</li>
-                                    <li>tag</li>
-                                </ul>
-                                <div class="btn"><button class="btn-tertiary">View Details</button></div>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="game-detail.html">
-                                <div class="img">
-                                    <img src="img/game/game-coming-soon.jpg">
-                                </div>
-                                <h4>Coin Matching</h4>
-                                <ul class="tags">
-                                    <li>tag</li>
-                                    <li>tag</li>
-                                    <li>tag</li>
+                                    <li>fortune</li>
+                                    <li>roulette</li>
+                                    <li>&lt; 3 minutes</li>
                                 </ul>
                                 <div class="btn"><button class="btn-tertiary">View Details</button></div>
                             </a>
