--- a/guess-the-number.html
+++ b/guess-the-number.html
@@ -159,7 +159,7 @@
                                     </video>
                                     <div class="game-content">
                                         <div class="result">
-                                            <img src="img/game/dice/dice01.png">
+                                            <img src="img/game/guess-the-number/card.png">
                                             <!-- <img src="img/game/dice/dice02.png">
                                             <img src="img/game/dice/dice03.png"> -->
                                         </div>
@@ -169,37 +169,37 @@
                                                 <input id="dice01" type="radio" name="dice" value="dice01">
                                                 <label for="dice01">
                                                     <img class="bg" src="img/game/guess-the-number/btn-bg.png">
-                                                    <img class="item" src="img/game/dice/dice01.png">
+                                                    <img class="item" src="img/game/guess-the-number/card1.png">
                                                 </label>
 
                                                 <input id="dice02" type="radio" name="dice" value="dice02">
                                                 <label for="dice02">
                                                     <img class="bg" src="img/game/guess-the-number/btn-bg.png">
-                                                    <img class="item" src="img/game/dice/dice02.png">
+                                                    <img class="item" src="img/game/guess-the-number/card2.png">
                                                 </label>
 
                                                 <input id="dice03" type="radio" name="dice" value="dice03">
                                                 <label for="dice03">
                                                     <img class="bg" src="img/game/guess-the-number/btn-bg.png">
-                                                    <img class="item" src="img/game/dice/dice03.png">
+                                                    <img class="item" src="img/game/guess-the-number/card3.png">
                                                 </label>
 
                                                 <input id="dice04" type="radio" name="dice" value="dice04">
                                                 <label for="dice04">
                                                     <img class="bg" src="img/game/guess-the-number/btn-bg.png">
-                                                    <img class="item" src="img/game/dice/dice04.png">
+                                                    <img class="item" src="img/game/guess-the-number/card4.png">
                                                 </label>
 
                                                 <input id="dice05" type="radio" name="dice" value="dice05">
                                                 <label for="dice05">
                                                     <img class="bg" src="img/game/guess-the-number/btn-bg.png">
-                                                    <img class="item" src="img/game/dice/dice05.png">
+                                                    <img class="item" src="img/game/guess-the-number/card5.png">
                                                 </label>
 
                                                 <input id="dice06" type="radio" name="dice" value="dice06">
                                                 <label for="dice06">
                                                     <img class="bg" src="img/game/guess-the-number/btn-bg.png">
-                                                    <img class="item" src="img/game/dice/dice06.png">
+                                                    <img class="item" src="img/game/guess-the-number/card6.png">
                                                 </label>
                                             </div>
 
@@ -255,7 +255,7 @@
                                         computer's, the system shall seize your wager.
                                     </p>
                                 </div>
-                                <div class="awards">
+                                <!-- <div class="awards">
                                     <div class="louder"><i class="icon-Loudspeaker"></i></div>
                                     <div class="swiper award-list">
                                         <div class="swiper-wrapper">
@@ -266,7 +266,7 @@
                                             <div class="swiper-slide">"0xe21...rjs14”winning 50 $ZKZ！</div>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                                 <div class="odd-n-bet">
                                     <div class="odds">
                                         <label>
