--- a/index.html
+++ b/index.html
@@ -205,6 +205,30 @@
 											<button class="btn-tertiary">View Details</button>
 										</div>
 									</div>
+									<div class="swiper-slide" onclick="location='paper-scissors-stone.html'">
+										<img src="img/game/paper-scissors-stone/thumb.jpg">
+										<div class="hover">
+											<h4>Paper, Scissors, Stone</h4>
+											<ul class="tags">
+												<li>fortune</li>
+												<li>paper-scissors-stone</li>
+												<li>&lt; 3 minutes</li>
+											</ul>
+											<button class="btn-tertiary">Coming Soon</button>
+										</div>
+									</div>
+									<div class="swiper-slide" onclick="location='interstellar-connection.html'">
+										<img src="img/game/interstellar-connection/thumb.jpg">
+										<div class="hover">
+											<h4>Interstellar Connection</h4>
+											<ul class="tags">
+												<li>fortune</li>
+												<li>slot machine</li>
+												<li>&lt; 3 minutes</li>
+											</ul>
+											<button class="btn-tertiary">Coming Soon</button>
+										</div>
+									</div>
 									<div class="swiper-slide" onclick="location='bet-big-small.html'">
 										<img src="img/game/bet-big-small/thumb.jpg">
 										<div class="hover">
@@ -217,7 +241,7 @@
 											<button class="btn-tertiary">View Details</button>
 										</div>
 									</div>
-									<div class="swiper-slide" onclick="location='game-detail.html'">
+									<div class="swiper-slide" onclick="location='odd-even-betting.html'">
 										<img src="img/game/odd-even-betting/thumb.jpg">
 										<div class="hover">
 											<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
@@ -229,8 +253,8 @@
 											<button class="btn-tertiary">View Details</button>
 										</div>
 									</div>
-									<div class="swiper-slide" onclick="location='game-detail.html'">
-										<img src="img/game/higher-number-wins/thumg.jpg">
+									<div class="swiper-slide" onclick="location='higher-number-wins.html'">
+										<img src="img/game/higher-number-wins/thumb.jpg">
 										<div class="hover">
 											<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
 											<ul class="tags">
@@ -241,8 +265,8 @@
 											<button class="btn-tertiary">View Details</button>
 										</div>
 									</div>
-									<div class="swiper-slide" onclick="location='game-detail.html'">
-										<img src="img/game/game-05/thumb.jpg">
+									<div class="swiper-slide" onclick="location='coin-matching.html'">
+										<img src="img/game/coin-matching/thumb.jpg">
 										<div class="hover">
 											<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
 											<ul class="tags">
@@ -253,8 +277,8 @@
 											<button class="btn-tertiary">View Details</button>
 										</div>
 									</div>
-									<div class="swiper-slide" onclick="location='game-detail.html'">
-										<img src="img/game/game-06/thumb.jpg">
+									<div class="swiper-slide" onclick="location='red-vs-black.html'">
+										<img src="img/game/red-vs-black/thumb.jpg">
 										<div class="hover">
 											<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
 											<ul class="tags">
@@ -265,8 +289,8 @@
 											<button class="btn-tertiary">View Details</button>
 										</div>
 									</div>
-									<div class="swiper-slide" onclick="location='game-detail.html'">
-										<img src="img/game/game-07/thumb.jpg">
+									<div class="swiper-slide" onclick="location='super-fruit-roulette.html'">
+										<img src="img/game/super-fruit-roulette/thumb.jpg">
 										<div class="hover">
 											<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
 											<ul class="tags">
@@ -277,32 +301,8 @@
 											<button class="btn-tertiary">View Details</button>
 										</div>
 									</div>
-									<div class="swiper-slide" onclick="location='game-detail.html'">
-										<img src="img/game/game-08/thumb.jpg">
-										<div class="hover">
-											<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
-											<ul class="tags">
-												<li>tag</li>
-												<li>tag</li>
-												<li>tag</li>
-											</ul>
-											<button class="btn-tertiary">View Details</button>
-										</div>
-									</div>
-									<div class="swiper-slide" onclick="location='game-detail.html'">
-										<img src="img/game/game-09/thumb.jpg">
-										<div class="hover">
-											<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
-											<ul class="tags">
-												<li>tag</li>
-												<li>tag</li>
-												<li>tag</li>
-											</ul>
-											<button class="btn-tertiary">View Details</button>
-										</div>
-									</div>
-									<div class="swiper-slide" onclick="location='game-detail.html'">
-										<img src="img/game/game-10/thumb.jpg">
+									<div class="swiper-slide" onclick="location='spin-the-wheel.html'">
+										<img src="img/game/spin-the-wheel/thumb.jpg">
 										<div class="hover">
 											<h4>《決勝時刻®：現代戰爭® II 2022》</h4>
 											<ul class="tags">
