隱藏遊戲內頁大聲公

--- a/guess-the-number.html
+++ b/guess-the-number.html
@@ -255,7 +255,7 @@
                                         computer's, the system shall seize your wager.
                                     </p>
                                 </div>
-                                <div class="awards">
+                                <!-- <div class="awards">
                                     <div class="louder"><i class="icon-Loudspeaker"></i></div>
                                     <div class="swiper award-list">
                                         <div class="swiper-wrapper">
@@ -266,7 +266,7 @@
                                             <div class="swiper-slide">"0xe21...rjs14”winning 50 $ZKZ！</div>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                                 <div class="odd-n-bet">
                                     <div class="odds">
                                         <label>
